Trying to fix scroll on mobile

--- a/css/Ultimate.css
+++ b/css/Ultimate.css
@@ -24,6 +24,17 @@ div#map {
 body {
 	background-color:#0E0B16;
 }
+/*Content menu*/
+ol.contentMenu {
+	/*list-style-type: none;*/
+}
+a.contentLink {
+	color:#4717F6;
+	cursor: pointer;
+}
+a.contentLink:hover, a.contentLink:focus {
+	color:#633af8;
+}
 /*Buttons*/
 button {
 	color: white;
